--- a/js/index.html
+++ b/js/index.html
@@ -9,7 +9,26 @@
 </head>
 <body>
 
-<ul class="gallery"></ul>
+    <div>
+
+        <ul class="gallery">
+            <li class="gallery-item">
+                <a class="gallery-link" href="large-image.jpg">
+                  <img
+                    class="gallery-image"
+                    src="small-image.jpg"
+                    data-source="large-image.jpg"
+                    alt="Image description"
+                  />
+                </a>
+              </li>
+              
+
+
+        </ul>
+    </div>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
     <script src="./gallery.js"  type="module"></script>
